# crap-cms

./: .dockerignore  .editorconfig  .gitignore  404.html  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.dev  README.md  biome.json  build.rs  index.html  introduction.html  print.html  rust-toolchain.toml  searcher-c2a407aa.js  searchindex-0a849469.js  searchindex-5fa5c493.js  searchindex-6b4cb108.js  searchindex-6f7fe291.js  searchindex-95b5fa60.js  searchindex-985a8296.js  searchindex-9b101746.js  searchindex-bb4fd1e2.js  searchindex-c8cd5850.js  searchindex-d5ee608c.js  searchindex-d82968e4.js  toc-094f01c0.js  toc-5408acc1.js  toc-70c0d16d.js  toc-8a8be9f9.js  toc-8f88eb31.js  toc.html
.cargo/: audit.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  nightly.yml  release.yml
access-control/: collection-level.html  field-level.html  filter-constraints.html  overview.html
admin-ui/: display-conditions.html  index.html  overview.html  static-files.html  template-context.html  template-overlay.html  themes.html
admin-ui/guides/: display-conditions.html  partials.html  slots.html  static-files.html  template-formatter.html  template-overlay.html  themes.html
admin-ui/reference/: atom-inventory.html  components.html  css-variables.html  events.html  routes.html  template-context.html
admin-ui/scenarios/: 01-restyle.html  02-add-list-column.html  03-replace-component.html  04-dashboard-widget.html  05-custom-page.html  06-custom-richtext-node.html  07-custom-field-type.html  08-upgrade.html
admin-ui/upgrade/: drift-tooling.html  migrating-from-old-layout.html  stability-tiers.html
authentication/: auth-collections.html  cli-user-creation.html  custom-strategies.html  login-flow.html  overview.html
cli/: flags.html
collections/: definition-schema.html  overview.html  soft-deletes.html  versions.html
configuration/: crap-toml.html
crap-cms/data/: crap.db-shm
crap-cms/types/: generated.lua
database/: overview.html
deployment/: multi-server.html  single-server.html
docs/: book.toml
docs/book/: 404.html  index.html  introduction.html  print.html  searcher-c2a407aa.js  searchindex-76ee6ee2.js  searchindex-bfaa04a8.js  toc-7aa5378d.js  toc-f00845ee.js  toc.html
docs/src/: SUMMARY.md  introduction.md
example/: .gitignore  .mcp.json  crap.toml  init.lua
example/access/: api_key_strategy.lua
example/collections/: articles.lua  events.lua  media.lua  pages.lua  posts.lua  projects.lua  test_nesting.lua  testimonials.lua  users.lua
example/hooks/: auto_slug.lua  labels.lua  notify_inquiry.lua  on_init.lua  prevent_last_admin.lua  reading_time.lua  set_published_at.lua  trim_title.lua  validate_budget.lua  validate_rating.lua
example/jobs/: cleanup_archived.lua  process_inquiry.lua  weekly_report.lua
example/migrations/: 20260301000000_seed_crap_data.lua
example/plugins/: rating.lua  seo.lua
example/types/: crap.lua  generated.lua
fields/: array.html  blocks.html  checkbox.html  code.html  collapsible.html  date.html  email.html  group.html  join.html  json.html  number.html  overview.html  radio.html  relationship.html  richtext.html  row.html  select.html  tabs.html  text.html  textarea.html  upload.html
getting-started/: config-directory.html  installation.html  quickstart.html
globals/: overview.html
grpc-api/: authentication.html  overview.html  rpcs.html  type-safety.html  where-clause.html
hooks/: execution-order.html  field-hooks.html  hook-context.html  lifecycle-events.html  overview.html  registered-hooks.html  transaction-access.html
internals/: api-surface-comparison.html  cache.html
jobs/: overview.html
live-updates/: admin-sse.html  grpc-streaming.html  hooks.html  overview.html
locale/: overview.html
lua/: util_helpers.lua
lua-api/: auth.html  collections.html  config.html  crypto.html  email.html  env.html  filter-operators.html  globals.html  hooks.html  http.html  jobs.html  json.html  locale.html  log.html  overview.html  richtext.html  schema.html  util.html
mcp/: overview.html
plugins/: overview.html
proto/: content.proto
query-and-filters/: overview.html
relationships/: delete-protection.html  overview.html  population-depth.html
scripts/: bundle-codemirror.sh  bundle-htmx.sh  bundle-prosemirror.sh  codemirror-entry.js  install.sh  prosemirror-entry.js
src/: config.rs  lib.rs  main.rs  scaffold.rs  service.rs  typegen.rs
src/admin/: auth_middleware.rs  context.rs  context_builder.rs  csp_nonce.rs  custom_pages.rs  mcp_handler.rs  mod.rs  server.rs  server_builder.rs  templates.rs  translations.rs
src/api/: grpc_start_params_builder.rs  mod.rs  rate_limit.rs  server.rs  server_builder.rs  service.rs  upload.rs
src/cli/: output.rs  spinner.rs  table.rs
src/commands/: cli_types.rs  config_resolve.rs  db.rs  export.rs  fmt.rs  helpers.rs  images.rs  init.rs  jobs.rs  logs.rs  make.rs  mcp.rs  mod.rs  serve.rs  status.rs  templates.rs  trash.rs  (+3 more)
static/: badges.css  breadcrumb.css  buttons.css  cards.css  components.js  edit-sidebar.css  forms.css  layout.css  list-toolbar.css  lists.css  prosemirror.js  styles.css  tables.css  themes.css
tests/: access_control.rs  admin_auth.rs  admin_collections.rs  admin_collections_misc.rs  admin_collections_versioning.rs  admin_globals.rs  admin_globals_extras.rs  admin_globals_upload_security.rs  admin_integration.rs  api.sh  baseline.md  cli_commands.rs  cli_commands_ops.rs  cli_integration.rs  cli_scaffold_migrate.rs  db_coercion_migration.rs  db_filter.rs  db_integration.rs  db_integration_advanced.rs  db_join.rs  db_join_depth.rs  db_join_globals.rs  db_locale.rs  db_security.rs  db_soft_delete.rs  event_transport.rs  grpc_auth.rs  grpc_crud_gaps.rs  grpc_crud_ops.rs  grpc_default_deny.rs  grpc_hooks_locale.rs  grpc_integration.rs  grpc_loadtest.sh  grpc_nested_crud.rs  grpc_query.rs  grpc_query_filters.rs  grpc_subscribe_jobs.rs  grpc_subscribe_security.rs  hook_field_context.rs  hook_lifecycle.rs  (+20 more)
translations/: de.json  en.json
types/: crap.lua
uploads/: client-uploads.html  image-processing.html  overview.html
(+1298 files in other folders)
