[package]
name = "crap-cms"
version = "0.1.0-alpha.2"
edition = "2024"
default-run = "crap-cms"
description = "Headless CMS in Rust with Lua hooks, gRPC API, and HTMX admin UI"
license = "MIT"
repository = "https://github.com/dkluhzeb/crap-cms"
homepage = "https://github.com/dkluhzeb/crap-cms"
authors = ["dkluhzeb"]
keywords = ["cms", "headless", "grpc", "lua", "htmx"]
categories = ["web-programming", "database"]
readme = "README.md"

[[bin]]
name = "crap-cms"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["form", "macros", "query", "multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "compression-br", "trace"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "io-util", "io-std"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.32"

# Templates
handlebars = { version = "6", features = ["dir_source"] }
include_dir = "0.7"

# gRPC
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-reflection = "0.14"
tokio-stream = { version = "0.1", features = ["sync"] }

# Lua
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize", "send"] }

# Config & CLI
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
toml = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "builder", "smtp-transport"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "avif"] }
webp = "0.3"

# HTTP client (blocking — used in Lua spawn_blocking context)
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Crypto
ring = "0.17"
base64 = "0.22"
rand = "0.9"
aes-gcm = "0.10"

# Cron scheduling
cron = "0.12"

# HTTP/2 cleartext (h2c) support
hyper = { version = "1", features = ["server", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "http2", "server-auto"] }

# Tower (rate limiting, timeouts)
tower = { version = "0.5", features = ["util", "timeout"] }

# URL parsing
url = "2"

# Utilities
rpassword = "7"
nanoid = "0.4"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
mime_guess = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
form_urlencoded = "1.2.2"
regex = "1.12.3"
dashmap = "6.1.0"
subtle = "2.6.1"
infer = "0.19.0"
tokio-util = { version = "0.7.18", features = ["rt"] }
tonic-health = "0.14.5"
chrono-tz = "0.10"

[features]
browser-tests = ["dep:chromiumoxide"]

[dependencies.chromiumoxide]
version = "0.7"
optional = true
default-features = false
features = ["tokio-runtime"]

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
scraper = "0.22"

[profile.dev.package.image]
opt-level = 2
[profile.dev.package.webp]
opt-level = 2

[build-dependencies]
tonic-prost-build = "0.14"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)', 'cfg(tarpaulin_include)', 'cfg(feature, values("browser-tests"))'] }

[profile.release]
lto = true
codegen-units = 1
strip = true
